Add number input to registering

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -13,7 +13,7 @@
                 <form>
                     <label class="item item-input">
                         <i class="icon ion-key placeholder-icon"></i>
-                        <input type="text" placeholder="{{'VERIFY_CODE' | translate}}" ng-model="user.code" >
+                        <input type="tel" maxlength="6" placeholder="{{'VERIFY_CODE' | translate}}" ng-model="user.code" >
                     </label>
                     <label class="item item-input">
                         <i class="icon ion-locked placeholder-icon"></i>
