Trying out pulsing verify button

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,7 +18,7 @@
                     </label>
                     <div class="button-wrapper">
                         <button ng-disabled="isLoginButtonDisabled"  class="button button-block button-positive icon-right ion-chevron-right" ng-click="login(user)" translate="LOGIN"></button>
-                        <button class="button button-block button-positive icon-right ion-chevron-right" ng-click="goToSignUp()" translate="REGISTER"></button>
+                        <button class="notify-pulse button button-block button-positive icon-right ion-chevron-right" ng-click="goToSignUp()" translate="REGISTER"></button>
                     </div>
                 </form>
             </div>
