--- a/app/scss/login.scss
+++ b/app/scss/login.scss
@@ -17,3 +17,13 @@
         background-color: #f5f5f5;
     }
 }
+
+@keyframes notify-pulse {
+    0%   { opacity: 1;}
+    50%  { opacity: 0.6;}
+    100% { opacity: 1;}
+}
+
+.notify-pulse {
+    animation: notify-pulse 1.75s infinite;
+}
