Functional user contacts syncing from settings

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -5,7 +5,7 @@
                 {{'MISCALLENEOUS' | translate}}
             </div>
             <div class="item item-text-wrap">
-                <button class="button button-block button-positive icon-right ion-chevron-right" translate="REFRESH_CONTACTS"></button>
+                <button  ng-click='updateContactsList()' class="button button-block button-positive icon-right ion-chevron-right" translate="REFRESH_CONTACTS"></button>
             </div>
         </div>
     </ion-content>
