Don't wrap empty state text in contacts list

--- a/app/scss/contacts.scss
+++ b/app/scss/contacts.scss
@@ -30,6 +30,12 @@
 
 .list {
 
+    .no-results {
+        h2 {
+            white-space: normal;
+        }
+    }
+
     .contact-wrapper {
         img, p2, h2 {
             transition: opacity 0.5s, filter 0.5s;
