--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -22,12 +22,12 @@
             </div>
         </div>
         <div class="list" ng-show="filteredContacts.length == 0 && contacts.length > 0">
-            <a class="item" href="#">
+            <a class="item no-results" href="#">
                 <h2>{{'NO_CONTACTS_SEARCH' | translate}}</h2>
             </a>
         </div>
         <div class="list" ng-hide="contacts.length > 0">
-            <a class="item" href="#">
+            <a class="item no-results" href="#">
                 <h2>{{'NO_CONTACTS_FOUND' | translate}}</h2>
             </a>
         </div>
