--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -1,15 +1,11 @@
 <ion-view>
     <ion-tabs class="tabs-icon-top tabs-positive">
-        <!-- <ion-tab title="Home" icon="ion-home" href="#/tab/home">
-            <ion-nav-view name="home-tab"></ion-nav-view>
-        </ion-tab> -->
-
         <ion-tab title="{{'CONTACTS' | translate}}" icon="ion-person-stalker" href="#/tab/contacts">
             <ion-nav-view name="contacts-tab"></ion-nav-view>
         </ion-tab>
-        <div ng-controller="LogoutCtrl">
-            <ion-tab title="{{'LOG_OUT' | translate}}" icon="ion-log-out" ng-click="logout()">
-        </div>
+        <ion-tab title="{{'SETTINGS' | translate}}" icon="ion-gear-a" href="#/tab/settings">
+            <ion-nav-view name="settings-tab"></ion-nav-view>
+        </ion-tab>
         </ion-tab>
     </ion-tabs>
 </ion-view>
