Some minor cosmetic settings improvements

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -1,6 +1,6 @@
 <ion-view view-title="{{'SETTINGS' | translate}}" ng-controller="SettingsCtrl">
     <ion-content class="padding flex-container ">
-        <div class="full-width-vw">
+        <div class=" settings-section full-width-vw">
             <div class="item item-divider text-center">
                 {{'MISCALLENEOUS' | translate}}
             </div>
