--- a/app/templates/modals/add-contact.html
+++ b/app/templates/modals/add-contact.html
@@ -3,12 +3,12 @@
     <ion-content>
         <div class="list list-inset">
             <label class="item item-input">
-                <input type="text" placeholder="Name">
+                <input ng-model="newContact.displayName" type="text" placeholder="Name">
             </label>
             <label class="item item-input">
-                <input type="text" placeholder="Number">
+                <input ng-model="newContact.phoneNumber" type="text" placeholder="Number">
             </label>
-            <button ng-click="addNewContactModalSubmit()" class="button button-block button-positive">Add</button>
+            <button ng-click="addNewContactModalSubmit(newContact)" class="button button-block button-positive">Add</button>
         </div>
     </ion-content>
 </ion-modal-view>
