More new contact localizations, lining up some elements

--- a/app/scss/contacts.scss
+++ b/app/scss/contacts.scss
@@ -3,6 +3,14 @@
   padding-right: 10px;
 }
 
+.add-new-contact-form {
+    .name-icon {
+        font-size: 1.3em;
+        margin-left:  9px;
+        margin-right: 17px;
+    }
+}
+
 .contact-telephone {
   margin-left: 3px;
 }
