--- a/app/templates/modals/add-contact.html
+++ b/app/templates/modals/add-contact.html
@@ -1,12 +1,13 @@
 <ion-modal-view>
-    <ion-header-bar class="bar-positive center"><h2 class="title">Add new contact</h2></ion-header-bar>
-    <ion-content>
+    <ion-header-bar class="bar-positive center"><h2 class="title">{{'ADD_CONTACT' | translate }}</h2></ion-header-bar>
+    <ion-content class="add-new-contact-form">
         <div class="list list-inset">
             <label class="item item-input">
+                <i class="icon name-icon ion-person placeholder-icon"></i>
                 <input ng-model="newContact.displayName" type="text" placeholder="{{'DISPLAY_NAME' | translate}}">
             </label>
             <intlpn national-node="false" default-country="fi" ng-model="newContact.phoneNumber" placeholder="{{'MOBILE_NUMBER' | translate}}"></intlpn>
-            <button ng-click="addNewContactModalSubmit(newContact)" class="button button-block button-positive">Add</button>
+            <button ng-click="addNewContactModalSubmit(newContact)" class="button button-block button-positive" translate="ADD"></button>
         </div>
     </ion-content>
 </ion-modal-view>
