--- a/app/templates/modals/add-contact.html
+++ b/app/templates/modals/add-contact.html
@@ -7,7 +7,15 @@
                 <input ng-model="newContact.displayName" type="text" placeholder="{{'DISPLAY_NAME' | translate}}">
             </label>
             <intlpn national-node="false" default-country="{{defaultCountry}}" ng-model="newContact.phoneNumber" placeholder="{{'MOBILE_NUMBER' | translate}}"></intlpn>
-            <button ng-click="addNewContactModalSubmit(newContact)" class="button button-block button-positive" translate="ADD"></button>
+
+            <div class="row contact-button-wrapper">
+                <div class="col col-33 cancel-button-col">
+                    <button ng-click="cancelAddContact()" class="button button-block button-positive icon-left ion-chevron-left" translate="CANCEL"></button>
+                </div>
+                <div class="col col-66 add-button-col">
+                    <button ng-click="addNewContactModalSubmit(newContact)" class="button button-block button-positive" translate="ADD"></button>
+                </div>
+            </div>
         </div>
     </ion-content>
 </ion-modal-view>
