Add real-time countdown to reconnect timer

--- a/app/templates/modals/reconnect-loader.html
+++ b/app/templates/modals/reconnect-loader.html
@@ -1,3 +1,3 @@
 <h1>{{'RECONNECT_STARTED' | translate}}</h1>
-<h2>{{'NEXT_RECONNECT_IN' | translate:nextReconnectIn}}</h2>
+<h2 translate="NEXT_RECONNECT_IN" translate-values="{countdown: countdown}"></h2>
 <ion-spinner class="call-loader"></ion-spinner>
