--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -8,6 +8,14 @@
                 <button  ng-click='updateContactsList()' class="button button-block button-positive icon-right ion-chevron-right" translate="REFRESH_CONTACTS"></button>
             </div>
         </div>
+        <div class=" settings-section full-width-vw">
+            <div class="item item-divider text-center">
+                {{'ABOUT' | translate}}
+            </div>
+            <div class="item item-text-wrap">
+                <h3>{{'VERSION' | translate}}: {{appVersion}}</h3>
+            </div>
+        </div>
     </ion-content>
     </ion-footer-bar>
 </ion-view>
