--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -13,7 +13,7 @@
                 {{'ABOUT' | translate}}
             </div>
             <div class="item item-text-wrap">
-                <h3>{{'VERSION' | translate}}: {{appVersion}}</h3>
+                <h3>{{'VERSION' | translate}}: {{::appVersion}}</h3>
             </div>
         </div>
     </ion-content>
