Smaller login screen size

--- a/app/scss/login.scss
+++ b/app/scss/login.scss
@@ -3,13 +3,13 @@
   font-weight: 800;
 }
 
-.login-wrapper {
-  top: 50%;
-  transform: translateY(50%);
+.login-form {
+    padding-left:  10vw;
+    padding-right: 10vw;
 }
 
 .button-wrapper {
-    margin-top: 10vh;
+    margin-top: 5vh;
     hr {
         margin-top: 20px;
         margin-bottom: 20px;
