--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -10,7 +10,7 @@
         <video id="remote-video" class="stream-video" autoplay ng-src="{{remoteStreamSrc}}"></video>
         <canvas id="remote-canvas"></canvas>
         <i class="icon call-button fullscreen-button" ng-class="determineFullscreenButtonClass()" ng-click="toggleFullscreen('remote')"></i>
-        <i class="icon ion-android-exit call-button leave-button" ng-click="leave()"></i>
+            <i class="icon assertive ion-ios-telephone-outline call-button leave-button" ng-click="leave()"></i>
     </div>
     </ion-content>
 </ion-view>
