--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -1,5 +1,5 @@
 <ion-view view-title="{{'CALL_HEADER' | translate:user}}" ng-controller="CallCtrl">
-    <ion-content class="padding">
+    <ion-content class="padding" scroll="false">
     <div class="content-wrapper" id="local-wrapper">
         <video id="local-video" class="stream-video" autoplay muted="muted" ng-src="{{localStreamSrc}}"></video>
         <canvas id="local-canvas"></canvas>
