Remove header from call.html

--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{'CALL_HEADER' | translate:user}}" ng-controller="CallCtrl">
+<ion-view view-title="{{'CALL_HEADER' | translate:user}}" hide-nav-bar="true" hide-back-button="true" ng-controller="CallCtrl">
     <ion-content class="padding" scroll="false">
     <div class="content-wrapper" id="local-wrapper">
         <video id="local-video" class="stream-video" autoplay muted="muted" ng-src="{{localStreamSrc}}"></video>
