Disable buttons from call for now

--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -64,11 +64,11 @@
 }
 
 #local-canvas {
-    //background-color: yellow;
+    background-color: yellow;
 }
 
 #remote-canvas {
-    //background-color: green;
+    background-color: green;
 }
 
 .content-wrapper.fullscreen {
