Show just the two videos for now

--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -63,11 +63,11 @@
     transform: translateX(-50%);
 }
 
-#local-canvas {
+#local-video {
     background-color: yellow;
 }
 
-#remote-canvas {
+#remote-video {
     background-color: green;
 }
 
