--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -1,13 +1,10 @@
 <ion-view view-title="{{'CALL_HEADER' | translate:user}}" hide-nav-bar="true" hide-back-button="true" ng-controller="CallCtrl">
-    <ion-content class="padding" scroll="false">
+    <ion-content scroll="false">
     <div class="content-wrapper" id="local-wrapper">
         <video id="local-video" class="stream-video" autoplay muted="muted" ng-src="{{localStreamSrc}}"></video>
-        <canvas id="local-canvas"></canvas>
-    </div>
-
-    <div class="content-wrapper" id="remote-wrapper">
         <video id="remote-video" class="stream-video" autoplay ng-src="{{remoteStreamSrc}}"></video>
-        <canvas id="remote-canvas"></canvas>
+        <canvas id="local-canvas" class="hide"></canvas>
+        <canvas id="remote-canvas" class="hide"></canvas>
     </div>
     </ion-content>
 </ion-view>
