--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -1,9 +1,3 @@
-.stream-video {
-  height: 44vh;
-  width: 56vw;
-  max-height: 44vh;
-  max-width: 56vw;
-}
 
 .canvas-container {
   opacity: 0.7;
@@ -13,9 +7,6 @@
   top: 0;
 }
 
-.canvas-container:nth-of-type(2) {
-    margin-top: 44vh;
-}
 .call-button {
     display: inline-block;
     width: 45px; /* 60*/
@@ -59,51 +50,22 @@
 }
 
 .content-wrapper{
-    margin-left: 50%;
-    transform: translateX(-50%);
+    height: 100vh;
+    width: 100vw;
 }
 
-#local-video {
+#big-video {
     background-color: yellow;
-}
-
-#remote-video {
-    background-color: green;
-}
-
-.content-wrapper.fullscreen {
-    height: 90vh;
+    height: 100%;
     width: 100%;
-
-    .stream-video {
-        height: 100%;
-        width: 100%;
-        max-width:100%;
-        max-height: 90vh;
-    }
-
-    .canvas-container {
-      opacity: 0.7;
-      //position: absolute !important;
-      height: 100% !important;
-      width: 100vw !important;
-      top: 0;
-    }
-
-    .canvas-container:nth-of-type(2) {
-        margin-top: 0;
-    }
-
-    .leave-button {
-        display: none;
-    }
-
-    .fullscreen-button {
-        position: relative;
-        bottom: 10vh;
-        margin-bottom: 15%;
-        margin-left: 0;
-        margin-left: 50%;
-    }
-
 }
+
+#small-video {
+    background-color: green;
+    height: 30vh;
+    width: 10vw;
+    position:absolute;
+    bottom: 20px;
+    right: 20px;
+}
+
