--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -1,8 +1,8 @@
 <ion-view view-title="{{'CALL_HEADER' | translate:user}}" hide-nav-bar="true" hide-back-button="true" ng-controller="CallCtrl">
-    <ion-content scroll="false">
+    <ion-content>
     <div class="content-wrapper" id="local-wrapper">
-        <video id="local-video" class="stream-video" autoplay muted="muted" ng-src="{{localStreamSrc}}"></video>
-        <video id="remote-video" class="stream-video" autoplay ng-src="{{remoteStreamSrc}}"></video>
+        <video id="big-video" class="stream-video" autoplay muted="muted" ng-src="{{localStreamSrc}}"></video>
+        <video id="small-video" class="stream-video" autoplay ng-src="{{remoteStreamSrc}}"></video>
         <canvas id="local-canvas" class="hide"></canvas>
         <canvas id="remote-canvas" class="hide"></canvas>
     </div>
