--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -9,6 +9,7 @@
 }
 
 .content-wrapper{
+    background-color: #444;
     height: 100vh;
     width: 100vw;
 }
@@ -32,7 +33,7 @@
 }
 
 .controls {
-    top: 30%;
+    bottom: 20px;
     left: 5%;
     width: 10%;
     height: 50%;
@@ -51,12 +52,29 @@
         color: #fff;
         text-align:center;
         z-index: 100;
+
+        &:active {
+            opacity: 1;
+        }
+    }
+
+
+    .pause-button {
+        font-size: 35px;
+        padding-top: 6px;
+    }
+
+    .remove-button {
+        font-size: 35px;
+        padding-top: 8px;
     }
 
     .leave-button {
+        padding-top: 3px;
         background-color: #ef473a;
         transform: rotate(136deg);
     }
+
 }
 
 .local-canvas-wrapper {
