--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -4,7 +4,7 @@
             <video id="big-video" autoplay muted="muted" ng-src="{{bigStreamSrc}}"></video>
             <video id="small-video" autoplay ng-click="toggleFullscreen()" ng-src="{{smallStreamSrc}}"></video>
             <div class="controls">
-                <i class="icon assertive ion-trash-a control-button remove-button" ng-click=""></i>
+                <i class="icon assertive ion-trash-a control-button remove-button" ng-click="clearActiveCanvas()"></i>
                 <i class="icon assertive ion-pause control-button pause-button" ng-click=""></i>
                 <i class="icon ion-ios-telephone control-button leave-button" ng-click="leave()"></i>
             </div>
