Add audio muting

--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -69,6 +69,11 @@
         padding-top: 8px;
     }
 
+    .mute-button {
+        font-size: 40px;
+        padding-top: 5px;
+    }
+
     .leave-button {
         padding-top: 3px;
         background-color: #ef473a;
