--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -2,7 +2,7 @@
     <ion-content scroll="false">
         <div class="content-wrapper" id="local-wrapper" ng-class="determineFullscreenCanvas()">
             <video id="big-video" ng-attr-autoplay="{{isStreamPlaying || undefined}}"  muted="muted" ng-src="{{bigStreamSrc}}"></video>
-            <video id="small-video" ng-attr-autoplay="{{isStreamPlaying || undefined}}" muted="muted" ng-click="toggleFullscreen()" ng-src="{{smallStreamSrc}}"></video>
+            <video id="small-video" ng-attr-autoplay="{{isStreamPlaying || undefined}}" muted="muted" ng-src="{{smallStreamSrc}}"></video>
             <audio id="call-audio" ng-src="{{remoteAudioSrc}}" autoplay></audio>
             <div class="controls">
                 <i class="icon assertive ion-trash-a control-button remove-button" ng-click="clearActiveCanvas()"></i>
