--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -1,8 +1,10 @@
 <ion-view view-title="{{'CALL_HEADER' | translate:user}}" hide-nav-bar="true" hide-back-button="true" ng-controller="CallCtrl">
     <ion-content scroll="false">
         <div class="content-wrapper" id="local-wrapper" ng-class="determineFullscreenCanvas()">
-            <video id="big-video" ng-attr-autoplay="{{isStreamPlaying || undefined}}"  muted="muted" ng-src="{{bigStreamSrc}}"></video>
-            <video id="small-video" ng-attr-autoplay="{{isStreamPlaying || undefined}}" muted="muted" ng-src="{{smallStreamSrc}}"></video>
+            <!--<video id="big-video" ng-attr-autoplay="{{isStreamPlaying || undefined}}"  muted="muted" ng-src="{{bigStreamSrc}}"></video> -->
+            <!--<video id="small-video" ng-attr-autoplay="{{isStreamPlaying || undefined}}" muted="muted" ng-src="{{smallStreamSrc}}"></video> -->
+            <video id="big-video"  autoplay muted="muted" ng-src="{{bigStreamSrc}}"></video>
+            <video id="small-video" autoplay muted="muted" ng-src="{{smallStreamSrc}}"></video>
             <audio id="call-audio" ng-src="{{remoteAudioSrc}}" autoplay></audio>
             <div class="controls">
                 <i class="icon assertive ion-trash-a control-button remove-button" ng-click="clearActiveCanvas()"></i>
