Skecthing out arrow symbol looks, change trashcan icon color and location

--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -64,7 +64,17 @@
         padding-top: 6px;
     }
 
+    .arrow-button {
+        font-size: 35px;
+        padding-top: 8px;
+
+        &.ion-edit {
+            font-size: 30px;
+        }
+    }
+
     .remove-button {
+        background-color: #ffc900;
         font-size: 35px;
         padding-top: 8px;
     }
