--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{'SETTINGS' | translate}}" ng-controller="SettingsCtrl">
+<ion-view view-title="{{'SETTINGS' | translate}}">
     <ion-content class="padding flex-container ">
         <div class=" settings-section full-width-vw">
             <div class="item item-divider text-center">
