--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -8,7 +8,17 @@
                 <button  ng-click='updateContactsList()' class="button button-block button-positive icon-right ion-chevron-right" translate="REFRESH_CONTACTS"></button>
             </div>
         </div>
-        <div class=" settings-section full-width-vw">
+        <div class="settings-section full-width-vw">
+            <div class="item item-divider text-center">
+                {{'SOAR_PREFERENCES' | translate}}
+            </div>
+            <div class="item item-text-wrap">
+                <ion-toggle ng-model="settings.saveCalls" ng-click="toggleVideoSave(settings.saveCalls)" toggle-class="toggle-positive">
+                    {{'PREFERENCES_SAVE_CALLS' | translate}}
+                </ion-toggle>
+            </div>
+        </div>
+        <div class="settings-section full-width-vw">
             <div class="item item-divider text-center">
                 {{'ABOUT' | translate}}
             </div>
