Change call settings subsection header to something more specific

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -10,7 +10,7 @@
         </div>
         <div class="settings-section full-width-vw">
             <div class="item item-divider text-center">
-                {{'SOAR_PREFERENCES' | translate}}
+                {{'RECORDING_PREFERENCES' | translate}}
             </div>
             <div class="item item-text-wrap">
                 <ion-toggle ng-model="settings.saveCalls" ng-click="toggleVideoSave(settings.saveCalls)" toggle-class="toggle-positive">
