--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -17,6 +17,19 @@
                     {{'PREFERENCES_SAVE_CALLS' | translate}}
                 </ion-toggle>
             </div>
+            <div class="item item-text-wrap">
+                <div class="row responsive-sm">
+                    <div class="col">
+                        <label class="item item-input">
+                            <span class="input-label">{{'RECORDING_FPS' | translate}}</span>
+                            <input type="tel" ng-model="settings.recordingInterval">
+                        </label>
+                    </div>
+                    <div class="col col-25">
+                        <button class="button button-assertive icon-right ion-close-circle" ng-click="emptyCallDataDir()" translate="DELETE_CACHED_VIDEOS"></button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="settings-section full-width-vw">
             <div class="item item-divider text-center">
