Make settings screen look a bit nice

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -18,7 +18,7 @@
                 </ion-toggle>
             </div>
             <div class="item item-text-wrap">
-                <div class="row responsive-sm">
+                <div class="row responsive-md">
                     <div class="col">
                         <label class="item item-input">
                             <span class="input-label">{{'RECORDING_FPS' | translate}}</span>
@@ -26,7 +26,7 @@
                         </label>
                     </div>
                     <div class="col col-25">
-                        <button class="button button-assertive icon-right ion-close-circle" ng-click="emptyCallDataDir()" translate="DELETE_CACHED_VIDEOS"></button>
+                        <button class="float-right button button-assertive icon-left ion-ios-trash" ng-click="emptyCallDataDir()" translate="DELETE_CACHED_VIDEOS"></button>
                     </div>
                 </div>
             </div>
