--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -19,13 +19,13 @@
             </div>
             <div class="item item-text-wrap">
                 <div class="row responsive-md">
-                    <div class="col">
+                    <div class="col col-50">
                         <label class="item item-input">
                             <span class="input-label">{{'RECORDING_FPS' | translate}}</span>
                             <input type="tel" ng-model="settings.recordingInterval">
                         </label>
                     </div>
-                    <div class="col col-25">
+                    <div class="col col-offset-25 col-25">
                         <button class="float-right button button-assertive icon-left ion-ios-trash" ng-click="emptyCallDataDir()" translate="DELETE_CACHED_VIDEOS"></button>
                     </div>
                 </div>
