--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -22,7 +22,7 @@
                     <div class="col col-50">
                         <label class="item item-input">
                             <span class="input-label">{{'RECORDING_FPS' | translate}}</span>
-                            <input type="tel" ng-model="settings.recordingInterval">
+                            <input type="tel" ng-model="settings.callRecordingInterval">
                         </label>
                     </div>
                     <div class="col col-offset-25 col-25">
