Style new button bar a bit more

--- a/app/scss/contacts.scss
+++ b/app/scss/contacts.scss
@@ -23,6 +23,13 @@
     }
 }
 
+.contacts-buttons {
+    button {
+        padding-right: 6px !important;
+        font-size: 0.8em;
+    }
+}
+
 .contact-telephone {
   margin-left: 3px;
 }
