--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -15,7 +15,7 @@
             <div class="button-bar contacts-buttons">
                 <button ng-click="toggleSearchbar" class="button button-block button-positive icon-left ion-search" translate="SEARCH"></button>
                 <button ng-click="addNewContact()" class="button button-block button-positive icon-left ion-person-add" translate="ADD_CONTACT"></button>
-                <button ng-click="refreshContacts()" class="button button-block button-positive icon-left ion-refresh" translate="REFRESH_CONTACTS"></button>
+                <button ng-click="reloadContactsList()" class="button button-block button-positive icon-left ion-refresh" translate="REFRESH_CONTACTS"></button>
             </div>
             <div ng-repeat="contact in filteredContacts = (contacts | filter:contactSearch)">
                 <div class="contact-wrapper" ng-class="contact.currentState">
