--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -1,5 +1,8 @@
 <ion-view view-title="{{'CONTACTS' | translate}} - {{user.phoneNumber | formatNumber }}" ng-cloak>
-    <ion-header-bar class="bar-light bar-subheader has-tabs-top search-bar">
+    <ion-content class="padding has-header has-subheader" ng-class="preloaderClass">
+        <div class="loader-wrapper">
+            <div class="loader"></div>
+        </div>
         <div class="list" ng-show="isSearchBarVisible">
             <label class="item item-input">
                 <span on-tap="toggleSearchBar()">
@@ -8,13 +11,8 @@
                 <input type="text" placeholder="{{'SEARCH' | translate}}" ng-model="contactSearch" ng-keyup="searchKeyPress($event.keyCode)">
             </label>
         </div>
-    </ion-header-bar>
-    <ion-content class="padding has-header has-subheader" ng-class="preloaderClass">
-        <div class="loader-wrapper">
-            <div class="loader"></div>
-        </div>
-        <div class="list">
-            <div class="button-bar contacts-buttons" ng-hide="isSearchBarVisible">
+        <div class="list" ng-hide="isSearchBarVisible">
+            <div class="button-bar contacts-buttons" >
                 <button ng-click="toggleSearchBar()" class="button button-block button-positive icon-left ion-search" translate="SEARCH"></button>
                 <button ng-click="addNewContact()" class="button button-block button-positive icon-left ion-person-add" translate="ADD_CONTACT"></button>
                 <button ng-click="reloadContactsList()" class="button button-block button-positive icon-left ion-refresh" translate="REFRESH_CONTACTS"></button>
