Remove header from contacts

--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -1,5 +1,5 @@
 <ion-view view-title="{{'CONTACTS' | translate}} - {{user.phoneNumber | formatNumber }}" ng-cloak>
-    <ion-content class="padding has-header has-subheader" ng-class="preloaderClass">
+    <ion-content class="padding" ng-class="preloaderClass">
         <div class="loader-wrapper">
             <div class="loader"></div>
         </div>
