--- a/app/scss/contacts.scss
+++ b/app/scss/contacts.scss
@@ -1,6 +1,6 @@
 .search-bar {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .add-new-contact-form {
@@ -21,6 +21,10 @@
         }
 
     }
+}
+
+.contacts-list {
+    margin-top: 15px;
 }
 
 .search-icon{
