--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -1,22 +1,28 @@
 <ion-view view-title="{{'CONTACTS' | translate}} - {{user.phoneNumber | formatNumber }}" ng-cloak>
-    <ion-content class="padding" ng-class="preloaderClass">
+    <ion-header-bar class="bar-light bar-subheader has-tabs-top">
+        <div class="list">
+            <div ng-show="isSearchBarVisible" class="search-bar">
+                    <label class="item item-input">
+                        <span on-tap="toggleSearchBar()">
+                            <i class="icon ion-ios-arrow-back search-icon placeholder-icon"></i>
+                        </span>
+                        <input type="text" id="search-bar" placeholder="{{'SEARCH' | translate}}"  ng-model="contactSearch" ng-keyup="searchKeyPress($event.keyCode)">
+                    </label>
+            </div>
+            <div ng-hide="isSearchBarVisible">
+                <div class="button-bar contacts-buttons">
+                    <button ng-click="toggleSearchBar()" class="button button-block button-positive icon-left ion-search" translate="SEARCH"></button>
+                    <button ng-click="addNewContact()" class="button button-block button-positive icon-left ion-person-add" translate="ADD_CONTACT"></button>
+                    <button ng-click="reloadContactsList()" class="button button-block button-positive icon-left ion-refresh" translate="REFRESH_CONTACTS"></button>
+                </div>
+            </div>
+        </div>
+    </ion-header-bar>
+    <ion-content class="padding has-header has-subheader" ng-class="preloaderClass">
         <div class="loader-wrapper">
             <div class="loader"></div>
         </div>
-        <div class="list" ng-show="isSearchBarVisible">
-            <label class="item item-input">
-                <span on-tap="toggleSearchBar()">
-                    <i class="icon ion-ios-arrow-back search-icon placeholder-icon"></i>
-                </span>
-                <input type="text" id="search-bar" placeholder="{{'SEARCH' | translate}}"  ng-model="contactSearch" ng-keyup="searchKeyPress($event.keyCode)">
-            </label>
-        </div>
-        <div class="list" >
-            <div class="button-bar contacts-buttons" ng-hide="isSearchBarVisible">
-                <button ng-click="toggleSearchBar()" class="button button-block button-positive icon-left ion-search" translate="SEARCH"></button>
-                <button ng-click="addNewContact()" class="button button-block button-positive icon-left ion-person-add" translate="ADD_CONTACT"></button>
-                <button ng-click="reloadContactsList()" class="button button-block button-positive icon-left ion-refresh" translate="REFRESH_CONTACTS"></button>
-            </div>
+        <div class="list contacts-list" >
             <div ng-repeat="contact in filteredContacts = (contacts | filter:contactSearch)">
                 <div class="contact-wrapper" ng-class="contact.currentState">
                     <a class="item item-avatar" href ng-click="selectUser(contact)">
